# TRX64

./: .gitignore  CHECKLIST.md  Cargo.toml  HANDOVER.md  MONITOR.md  README.md  THANKS.md
bench/: c64re_bench.ts  c64re_dist_bench.mjs
cli-feel-loop/: AGENTS.md  MASTER_PROMPT.md  SPEC.md  TEST-CHECKLIST.md  journal.md  state.json
crates/trx64-cli/: Cargo.toml  README.md
crates/trx64-cli/src/: audio.rs  boot_cmd.rs  convert_cmd.rs  diff_cmd.rs  disasm_cmd.rs  engine.rs  ftcolor.rs  keymap.rs  lib.rs  main.rs  sandbox_cmd.rs  tui.rs  window.rs
crates/trx64-cli/tests/: av_pull.rs  cd_relative_mount.rs  convert_vsf_roundtrip.rs  docs_agree.rs  e2e_787_isolation.rs  namespaces.rs  s7_media_semantics.rs  smoke.rs
crates/trx64-core/: Cargo.toml  build.rs
crates/trx64-core/src/: c64_6510core.rs  c64re_snapshot.rs  cart.rs  checkpoint_diff.rs  checkpoint_ring.rs  cia.rs  cpu.rs  cpu_history.rs  crash_triage.rs  delta_ring.rs  drive.rs  drive_6510core.rs  drive_snapshot.rs  flash040.rs  full.rs  full_sc.rs  gcr.rs  iec.rs  keyboard.rs  lib.rs  m93c86.rs  native_snapshot.rs  render.rs  resid_audio.rs  resid_ffi.rs  rewind.rs  ring_dump.rs  rotation.rs  scenario_player.rs  sid.rs  tables.rs  viacore.rs  vic.rs  vic_draw.rs  vic_inspect.rs  vice_snapshot_stream.rs  vsf.rs  vsf_export.rs
crates/trx64-core/src/recorder/: anchor_codec.rs  anchor_record.rs  anchor_store.rs  medium_source.rs  mod.rs  recorder_ring.rs  runtime_recorder.rs
crates/trx64-core/tests/: atn_irq_lag_probe.rs  cart_bin_gate.rs  cart_mapper_gate.rs  crash_triage_probe.rs  dd00_fast_probe.rs  drive_sector_read.rs  drive_stream_probe.rs  g64_mount_behavioral.rs  gcr_d64_parity.rs  gcr_sync_probe.rs  iec_load_probe.rs  irq_push_pc_probe.rs  iso_vic_gate.rs  loader_head_trace.rs  perf_bench.rs  resid_oracle.rs  reverse_step_probe.rs  scramble_av_record.rs  scramble_sprite_probe.rs  seven_game_gate.rs  snapshot_roundtrip_fidelity.rs  tick_hooks_probe.rs  vic_collision_gate.rs  vic_e4dd_skew.rs  vic_inspect_behavioral.rs  vsf_parity_probe.rs
crates/trx64-core/tests/fixtures/resid/: c64re_wasm.saw_noise_release.json  c64re_wasm.saw_noise_release.pcm.s16le  gen_reference.mjs  trx64_native.saw_noise_release.pcm.s16le
crates/trx64-daemon/: Cargo.toml
crates/trx64-daemon/src/: assembler.rs  candidate.rs  lib.rs  main.rs  observers.rs  project_knowledge.rs  snapshot_diff.rs  streaming.rs
crates/trx64-ffi/: API.md  Cargo.toml
crates/trx64-ffi/src/: events.rs  lib.rs  records.rs
crates/trx64-ffi/tests/: smoke.rs
crates/trx64-session/: Cargo.toml
crates/trx64-session/src/: lib.rs
crates/trx64-static/: Cargo.toml
crates/trx64-static/src/: disasm6502.rs  lib.rs
crates/trx64-static/tests/: goldens.rs
crates/trx64-static/tests/goldens/: disasm6502_goldens.json
crates/trx64-trace/: Cargo.toml
crates/trx64-trace/src/: lib.rs
docs/: 776-overlay-intervention-diff.md  783-local-quality-gate-enforcement.md  790-bin-cartridge-typed-attach.md  791-vsf-to-c64re-converter.md  792-snapshot-restore-fidelity.md  793-undump-media-materialization.md  794-whitebox-component-diff.md  795-banked-cart-code-overlay.md  796-candidate-model.md  797-final-code-delta.md  798-cheat-candidate-finder.md  capability-cut-decisions.md  command-syntax-convention.md  concepts-snapshots-scenarios-overlays.md  integration-report.md  perf-compare.md  spec-c64re-trx64-split-charter.md  spec-cross-platform-linux-windows.md  spec-power-lifecycle.md  spec-reverse-debug-crash-triage.md  spec-time-travel-tooling.md  spec-trace-read-duckdb-native.md  spec-trx64-cli.md  ts-parity-reconciliation.md  usecases-runtime-dev-sandbox.md
hooks/: pre-push
loop/: backlog.md  decisions.md  journal.md  loop-prompt.md  state.json
lykia-loop/: CHARTER.md  state.json
parity-loop/: backlog.md  journal.md  loop-prompt.md  overnight-delta-summary.md  state.json
scripts/: build-cli-dist.sh  build-xcframework.sh  dist-readme.md  e2e-787.sh  gate.sh  gen-disasm-goldens.mjs  install-hooks.sh
tools/: av_boot_driver.mjs  av_file_recorder.mjs
tools/oracle/: README.md  package-lock.json  package.json  tsconfig.json
tools/oracle/corpus/cia/: iso-cia-cascade-irq.json  iso-cia-cascade-oneshot.json  iso-cia-cascade.json  iso-cia-icr.json  iso-cia-ta-oneshot.json  iso-cia-tb-continuous.json  iso-cia-tod.json
tools/oracle/corpus/cpu/: boot-basic-ready.json  boot-trace-short.json  iso-loads-alu.json  iso-loops-cycles.json  iso-trace-bcd-illegal.json  iso-trace-broad.json  iso-trace-loads-alu.json  iso-trace-pagecross.json  iso-trace-stack-flow.json
tools/oracle/corpus/disk/: disk-load-dir.json  disk-mount-idle.json  disk-read-byteexact.json  disk-read-engage.json  scramble-load-file.json  scramble-load-progress.json
tools/oracle/corpus/drive/: drive-boot-deep.json  drive-boot-idle.json
tools/oracle/corpus/media/: media-browse.json  media-eject.json  media-mount.json  media-persist.json
tools/oracle/corpus/protocol/: api-call-breakpoints.json  api-call-monitor.json  api-call-stepping.json  debug-run-pause.json  session-list-close.json
tools/oracle/corpus/render/: .gitignore  README.md  boot-basic-ready.render.json  capture.mjs  compare.mjs  png.mjs  scenarios.mjs  scene.mjs  scramble-gold-probe.mjs  scramble-gold.mjs
tools/oracle/corpus/sid/: iso-sid-osc3-env3.json
tools/oracle/corpus/vic/: iso-vic-badline-irq.json  iso-vic-probe.json  iso-vic-raster.json  iso-vic-sprites.json
tools/oracle/corpus/vsf/: vsf-native-snapshot.json  vsf-save-load-roundtrip.json
tools/oracle/src/: conformance.ts  daemon.ts  diff.ts  integration.ts  oracle.ts  scenario.ts  trace-decode.ts  ws-client.ts
tools/trace-read-sidecar/: sidecar.ts
