[package]
name = "trx64-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Cross-platform CLI cockpit + on-demand emulator window for the TRX64 runtime (in-process)."

# Spec: docs/spec-trx64-cli.md — a first-party cross-platform frontend that links
# `trx64-daemon` (the [lib] target) and drives the machine IN-PROCESS via `dispatch`
# + the A/V-pull helpers. No daemon, no WS, no FFI. ratatui TUI cockpit + a
# winit/cpal native emulator window, both on the SAME Arc<Mutex<State>> machine.

# A thin [lib] face so integration tests (tests/) can drive the `Engine` verb layer
# on a single in-process machine — the binary is a thin `main` over it.
[lib]
name = "trx64_cli"
path = "src/lib.rs"

[[bin]]
name = "trx64-cli"
path = "src/main.rs"

[dependencies]
# The runtime, as a linkable library — we call dispatch()/pull_* from the SAME
# compilation unit the WS daemon uses, in-process. No second runtime path.
trx64-daemon = { path = "../trx64-daemon" }

# JSON plumbing for building Request params + reading Response/state.
serde_json = "1"

# CLI args (one-shot `mon` subcommand + flags).
clap = { version = "4", features = ["derive"] }

# base64 for the autostart `run <prg>` path (runtime/run_prg takes bytes_b64).
base64 = "0.22"

# ── TUI cockpit ──────────────────────────────────────────────────────────────
ratatui = "0.29"
crossterm = "0.28"

# NOTE: the native emulator window (Part 2) adds winit + softbuffer + cpal here.
