[package]
name = "trx64-daemon"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "trx64-daemon"
path = "src/main.rs"

[dependencies]
trx64-core = { path = "../trx64-core" }
trx64-trace = { path = "../trx64-trace" }
trx64-session = { path = "../trx64-session" }
