[package]
name = "trx64-daemon"
edition.workspace = true
version.workspace = true
license.workspace = true

# Linkable library face (additive — Spec FFI). Exposes the SAME compilation unit
# (src/main.rs) so the in-process FFI (`trx64-ffi`) can call `dispatch()` +
# `NotifyHub` socket-free. The `[[bin]]` below is unchanged.
[lib]
name = "trx64_daemon"
path = "src/lib.rs"

[[bin]]
name = "trx64-daemon"
path = "src/main.rs"

[dependencies]
trx64-core = { path = "../trx64-core" }
trx64-static = { path = "../trx64-static" }
trx64-trace = { path = "../trx64-trace" }
trx64-session = { path = "../trx64-session" }

# Async runtime
tokio = { version = "1", features = ["full"] }
# WebSocket
tokio-tungstenite = { version = "0.24", features = [] }
# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# CLI args
clap = { version = "4", features = ["derive"] }
# Futures
futures-util = "0.3"
# SHA256 for media/ingress event.sha256
sha2 = "0.10"
hex = "0.4"
png = "0.18.1"
